<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <TextView
        android:id="@+id/appName"
        android:layout_width="match_parent"
        android:layout_height="70dp"
        android:background="@color/blue_AppNameBackground"
        android:fontFamily="@font/monoton"
        android:text="@string/app_name"
        android:textAlignment="center"
        android:textColor="@color/white_AppName"
        android:textSize="35dp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:background="@color/yellow_AppBackground">

        <TextView
            android:id="@+id/txtPlayerName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:textSize="15dp"
            android:layout_weight="1"
            android:text="@string/txtPlayerName"
            android:textColor="@color/black_txtLevels"/>
        <TextView
            android:id="@+id/txtPlayerPoints"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:textSize="15dp"
            android:layout_weight="1"
            android:text="@string/txtPoints"
            android:textColor="@color/black_txtLevels"/>

    </LinearLayout>
    <android.support.v7.widget.RecyclerView
        android:id="@+id/ranking_recycler_view"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"/>


</LinearLayout>