<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/yellow_AppBackground"
    android:gravity="center"
    android:orientation="vertical"
    tools:context=".UnscrambleIT_Home">
<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_weight="1">

    <TextView
        android:id="@+id/appName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:background="@color/blue_AppNameBackground"
        android:text="@string/app_name"
        android:textAlignment="center"
        android:textColor="@color/white_AppName"
        android:textSize="35dp"/>
    </LinearLayout>
    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_weight="2">

        <Button
            android:id="@+id/btnBeginner"
            android:layout_width="85dp"
            android:layout_height="85dp"
            android:layout_gravity="top|center"
            android:layout_marginTop="30dp"
            android:background="@drawable/round_button"
            android:gravity="center_vertical|center_horizontal"
            android:textColor="#fff" />

        <ImageView
            android:id="@+id/imgBeginners"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="top|center"
            android:layout_marginTop="45dp"
            android:adjustViewBounds="true"
            android:elevation="55dp"
            android:maxWidth="55dp"
            android:maxHeight="55dp"
            android:scaleType="fitCenter"
            android:src="@drawable/beginner" />

        <TextView
            android:id="@+id/txtBeginner"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="top|center"
            android:layout_marginTop="115dp"
            android:text="@string/txtBeginner"
            android:textColor="@color/black_txtLevels" />
    </FrameLayout>

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_weight="2">

        <Button
            android:id="@+id/btnIntermidiate"
            android:layout_width="85dp"
            android:layout_height="85dp"
            android:layout_gravity="top|center"
            android:layout_marginTop="30dp"
            android:background="@drawable/round_button"
            android:gravity="center_vertical|center_horizontal"
            android:textColor="#fff" />

        <ImageView
            android:id="@+id/imgIntermidiate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="top|center"
            android:layout_marginTop="45dp"
            android:adjustViewBounds="true"
            android:elevation="55dp"
            android:maxWidth="55dp"
            android:maxHeight="55dp"
            android:scaleType="fitCenter"
            android:src="@drawable/intermidiate" />

        <TextView
            android:id="@+id/txtIntermidiate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="top|center"
            android:layout_marginTop="115dp"
            android:text="@string/txtIntermediate"
            android:textColor="@color/black_txtLevels" />
    </FrameLayout>

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_weight="2">

        <Button
            android:id="@+id/btnAdvanced"
            android:layout_width="85dp"
            android:layout_height="85dp"
            android:layout_gravity="top|center"
            android:layout_marginTop="30dp"
            android:background="@drawable/round_button"
            android:gravity="center_vertical|center_horizontal"
            android:textColor="#fff" />

        <ImageView
            android:id="@+id/imgAdvanced"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="top|center"
            android:layout_marginTop="45dp"
            android:adjustViewBounds="true"
            android:elevation="55dp"
            android:maxWidth="55dp"
            android:maxHeight="55dp"
            android:scaleType="fitCenter"
            android:src="@drawable/advanced" />

        <TextView
            android:id="@+id/txtAdvanced"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="top|center"
            android:layout_marginTop="115dp"
            android:text="@string/txtAdvanced"
            android:textColor="@color/black_txtLevels" />
    </FrameLayout>
</LinearLayout>