<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
  xmlns:app="http://schemas.android.com/apk/res-auto"
  xmlns:tools="http://schemas.android.com/tools"
  android:layout_width="match_parent"
  android:layout_height="match_parent"
  android:orientation="vertical"
  android:background="@color/yellow_AppBackground"
  tools:context=".view.activities.UnscrambleIT_beginner_level1">

  <LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/blue_AppNameBackground">

    <TextView
        android:id="@+id/txtLevelName"
        android:layout_width="350dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginLeft="45dp"
        android:fontFamily="@font/monoton"
        android:layout_weight="1"
        android:background="@color/blue_AppNameBackground"
        android:text="@string/app_name"
        android:textAlignment="textStart"
        android:textColor="@color/white_AppName"
        android:textSize="30dp" />

    <ImageView
      android:id="@+id/imgBeginners2"
      android:layout_width="wrap_content"
      android:layout_height="match_parent"
      android:layout_gravity="center"
      android:layout_weight="1"
      android:adjustViewBounds="true"
      android:elevation="55dp"
      android:maxWidth="95dp"
      android:maxHeight="95dp"
      android:scaleType="fitCenter"
      android:src="@drawable/beginner" />

  </LinearLayout>

  <LinearLayout
      android:layout_width="match_parent"
      android:layout_height="261dp"
      android:id="@+id/imgLevel">

    <ImageView
        android:id="@+id/imgStopWatch"
        android:layout_width="85dp"
        android:layout_height="85dp"
        android:layout_marginLeft="200dp"
        android:layout_gravity="top"
        android:layout_weight="1"
        app:srcCompat="@drawable/stopwatchfirstlevelbeginner" />
  </LinearLayout>

  <LinearLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:id="@+id/setenceToComplete"
        android:orientation="horizontal">

    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:id="@+id/setenceToComplete2"
        android:orientation="horizontal">

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:orientation="horizontal"
        android:id="@+id/setenceButtons">

    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:orientation="horizontal"
        android:id="@+id/setenceButtons2">

    </LinearLayout>

    <LinearLayout
      android:layout_width="match_parent"
      android:layout_height="match_parent"
      android:layout_weight="1"
      android:orientation="horizontal">

      <Button
          android:id="@+id/btnClear"
          android:background="@color/white_AppName"
          android:layout_width="wrap_content"
          android:layout_margin="10dp"
          android:layout_height="wrap_content"
          android:text="@string/txtClear"
          android:layout_weight="1"/>
        <Button
          android:id="@+id/btnSend"
            android:background="@color/white_AppName"
          android:layout_width="wrap_content"
            android:layout_margin="10dp"
          android:layout_height="wrap_content"
          android:text="@string/txtSend"
          android:layout_weight="1"/>
    </LinearLayout>

  </LinearLayout>


</LinearLayout>

