<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/list"
    android:orientation="vertical"
    tools:context=".view.fragments.tabletFragment"
    android:background="@color/yellow_AppBackground">
    <android.support.v7.widget.Toolbar
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:id="@+id/my_toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="?attr/colorPrimary"
        android:elevation="4dp"
        android:backgroundTint="@color/blue_AppNameBackground"
        android:textColor="@color/white_AppName"
        android:textAlignment="center"
        android:text="@string/app_name"
        android:fontFamily="@font/monoton"
        android:theme="@style/ThemeOverlay.AppCompat.Light"
        app:popupTheme="@style/ThemeOverlay.AppCompat.Light"
        android:textSize="35dp">
        <TextView
            android:id="@+id/appName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/blue_AppNameBackground"
            android:fontFamily="@font/monoton"
            android:text="@string/app_name"
            android:textAlignment="center"
            android:textColor="@color/white_AppName"
            android:textSize="35dp" />
    </android.support.v7.widget.Toolbar>
    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1">

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="3">

            <Button
                android:id="@+id/btnBeginner"
                android:layout_width="85dp"
                android:layout_height="85dp"
                android:layout_marginTop="70dp"
                android:layout_gravity="top|left"
                android:gravity="center_vertical|center_horizontal"
                android:textColor="#fff"
                android:background="@drawable/round_button"/>
            <ImageView
                android:id="@+id/imgBeginners"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/beginner"
                android:adjustViewBounds="true"
                android:layout_marginTop="85dp"
                android:layout_marginLeft="15dp"
                android:layout_gravity="top|left"
                android:maxWidth="55dp"
                android:maxHeight="55dp"
                android:scaleType="fitCenter"
                android:elevation="55dp"/>
            <TextView
                android:id="@+id/txtBeginner"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/txtBeginner"
                android:textColor="@color/black_txtLevels"
                android:layout_marginTop="155dp"
                android:layout_marginLeft="15dp"
                android:layout_gravity="top|left"/>

            <Button
                android:id="@+id/btnIntermidiate"
                android:layout_width="85dp"
                android:layout_height="85dp"
                android:layout_marginTop="75dp"
                android:layout_gravity="top|center"
                android:gravity="center_vertical|center_horizontal"
                android:textColor="#fff"
                android:background="@drawable/round_button"/>
            <ImageView
                android:id="@+id/imgIntermidiate"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/intermidiate"
                android:adjustViewBounds="true"
                android:layout_marginTop="85dp"
                android:layout_gravity="top|center"
                android:maxWidth="55dp"
                android:maxHeight="55dp"
                android:scaleType="fitCenter"
                android:elevation="55dp"/>

            <TextView
                android:id="@+id/txtIntermidiate"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/txtIntermediate"
                android:textColor="@color/black_txtLevels"
                android:layout_marginTop="160dp"
                android:layout_gravity="top|center"/>

            <Button
                android:id="@+id/btnAdvanced"
                android:layout_width="85dp"
                android:layout_height="85dp"
                android:layout_marginTop="75dp"
                android:layout_gravity="top|right"
                android:gravity="center_vertical|center_horizontal"
                android:textColor="#fff"
                android:background="@drawable/round_button"/>
            <ImageView
                android:id="@+id/imgAdvanced"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/advanced"
                android:adjustViewBounds="true"
                android:layout_marginTop="85dp"
                android:layout_marginRight="15dp"
                android:layout_gravity="top|right"
                android:maxWidth="55dp"
                android:maxHeight="55dp"
                android:scaleType="fitCenter"
                android:elevation="55dp"/>

            <TextView
                android:id="@+id/txtAdvanced"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/txtAdvanced"
                android:layout_marginRight="10dp"
                android:textColor="@color/black_txtLevels"
                android:layout_marginTop="160dp"
                android:layout_gravity="top|right"/>

        </FrameLayout>
    </LinearLayout>
</LinearLayout>

