<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/yellow_AppBackground"
    android:id="@+id/fragPort"
    android:gravity="center"
    android:orientation="vertical"
    tools:context=".view.fragments.homeFragment">
    <android.support.v7.widget.Toolbar
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_weight="1"
        android:id="@+id/my_toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="?attr/colorPrimary"
        android:elevation="4dp"
        android:backgroundTint="@color/blue_AppNameBackground"
        android:textColor="@color/white_AppName"
        android:textAlignment="center"
        android:text="@string/app_name"
        android:fontFamily="@font/monoton"
        android:theme="@style/ThemeOverlay.AppCompat.Light"
        app:popupTheme="@style/ThemeOverlay.AppCompat.Light"
        android:textSize="35dp">
    <TextView
        android:id="@+id/appName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/blue_AppNameBackground"
        android:fontFamily="@font/monoton"
        android:text="@string/app_name"
        android:textAlignment="center"
        android:textColor="@color/white_AppName"
        android:textSize="33dp" />
    </android.support.v7.widget.Toolbar>
    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_weight="2"
        android:layout_marginTop="40dp">

        <Button
            android:id="@+id/btnBeginner"
            android:layout_width="85dp"
            android:layout_height="85dp"
            android:layout_gravity="top|center"
            android:background="@drawable/round_button"
            android:gravity="center_vertical|center_horizontal"
            android:textColor="#fff" />

        <ImageView
            android:id="@+id/imgBeginners"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="top|center"
            android:layout_marginTop="15dp"
            android:adjustViewBounds="true"
            android:elevation="55dp"
            android:maxWidth="55dp"
            android:maxHeight="55dp"
            android:scaleType="fitCenter"
            android:src="@drawable/beginner" />

        <TextView
            android:id="@+id/txtBeginner"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="top|center"
            android:layout_marginTop="85dp"
            android:textStyle="bold"
            android:textSize="22dp"
            android:fontFamily="@font/annie_use_your_telescope"
            android:text="@string/txtBeginner"
            android:textColor="@color/black_txtLevels" />
    </FrameLayout>

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_weight="2">

        <Button
            android:id="@+id/btnIntermidiate"
            android:layout_width="85dp"
            android:layout_height="85dp"
            android:layout_gravity="top|center"
            android:background="@drawable/round_button"
            android:gravity="center_vertical|center_horizontal"
            android:textColor="#fff" />

        <ImageView
            android:id="@+id/imgIntermidiate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="top|center"
            android:layout_marginTop="15dp"
            android:adjustViewBounds="true"
            android:elevation="55dp"
            android:maxWidth="55dp"
            android:maxHeight="55dp"
            android:scaleType="fitCenter"
            android:src="@drawable/intermidiate" />

        <TextView
            android:id="@+id/txtIntermidiate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="top|center"
            android:layout_marginTop="85dp"
            android:textStyle="bold"
            android:textSize="22dp"
            android:fontFamily="@font/annie_use_your_telescope"
            android:text="@string/txtIntermediate"
            android:textColor="@color/black_txtLevels" />
    </FrameLayout>

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_weight="2">

        <Button
            android:id="@+id/btnAdvanced"
            android:layout_width="85dp"
            android:layout_height="85dp"
            android:layout_gravity="top|center"
            android:background="@drawable/round_button"
            android:gravity="center_vertical|center_horizontal"
            android:textColor="#fff" />

        <ImageView
            android:id="@+id/imgAdvanced"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="top|center"
            android:layout_marginTop="15dp"
            android:adjustViewBounds="true"
            android:elevation="55dp"
            android:maxWidth="55dp"
            android:maxHeight="55dp"
            android:scaleType="fitCenter"
            android:src="@drawable/advanced" />

        <TextView
            android:id="@+id/txtAdvanced"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="top|center"
            android:layout_marginTop="85dp"
            android:textStyle="bold"
            android:textSize="22dp"
            android:fontFamily="@font/annie_use_your_telescope"
            android:text="@string/txtAdvanced"
            android:textColor="@color/black_txtLevels" />
    </FrameLayout>

</LinearLayout>
